test/files/neg/t6283.scala
abstract class Funky(val i: Int) extends AnyVal
